--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/server.ts",
-    "dev:debug": "ts-node-dev --inspect --respawn --transpile-only -r tsconfig-paths/register src/server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --watch src -r tsconfig-paths/register src/server.ts",
+    "dev:debug": "ts-node-dev --inspect --respawn --transpile-only --ignore-watch node_modules --watch src -r tsconfig-paths/register src/server.ts"
   },
   "dependencies": {
     "express": "^4.18.2",
